--- a/infra/.rubocop.yml
+++ b/infra/.rubocop.yml
@@ -18,5 +18,8 @@ Metrics/ClassLength:
 Metrics/AbcSize:
   Max: 20
 
+Style/Documentation:
+  Enabled: false
+
 Style/FrozenStringLiteralComment:
   Enabled: true
