chore: update dependencies and environment configuration

--- a/infra/Dockerfile
+++ b/infra/Dockerfile
@@ -2,12 +2,14 @@ FROM ruby:3.2.0
 
 WORKDIR /app
 
-COPY Gemfile Gemfile.lock ./
-COPY public ./public
-COPY docs ./docs
+ARG BUNDLE_WITHOUT="test"
+ENV BUNDLE_WITHOUT=$BUNDLE_WITHOUT
 
+COPY Gemfile Gemfile.lock ./
 RUN bundle install
 
+COPY public ./public
+COPY docs ./docs
 COPY . .
 
 CMD ["bundle", "exec", "rackup", "-p", "4567", "-o", "0.0.0.0"]
