--- a/infra/compose.yml
+++ b/infra/compose.yml
@@ -1,16 +1,40 @@
 services:
-  api:
+  api-dev:
     build:
       context: ..
       dockerfile: infra/Dockerfile
+      args:
+        BUNDLE_WITHOUT: "test"
     ports:
       - "4567:4567"
     env_file:
-      - ../.env
+      - ../.env.development
     depends_on:
       - mongo
+    volumes:
+      - ../:/app
+
+  api-test:
+    build:
+      context: ..
+      dockerfile: infra/Dockerfile
+      args:
+        BUNDLE_WITHOUT: ""
+    ports:
+      - "4568:4567"
+    env_file:
+      - ../.env.test
+    depends_on:
+      - mongo
+    volumes:
+      - ../:/app
 
   mongo:
     image: mongo:6
     ports:
       - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+
+volumes:
+  mongo_data:
